jlink added to client module